--- a/index.html
+++ b/index.html
@@ -68,9 +68,14 @@
         <img src="./images/luk.png" />
       </li>
       <li>
-        <h3></h3>
-        <p></p>
-        <img src="" />
+        <h3>Поза кошки</h3>
+        <p>
+          Встань на оба колена и обе руки. Затем прогнись так, чтобы голова, руки, грудь были на земле. Как кошка,
+          которая пролезает под забором или подтягивается. Оставайся в этой позе долго, чтобы энергия с верхней части
+          таза стекла к голове. Следи, чтобы позвоночник был изящно согнут вниз. Расстройство живота и легких помогает
+          устранить эта поза. Станешь выносливым, разовьешь разум.
+        </p>
+        <img src="./images/koshka.png" />
       </li>
       <li></li>
       <li></li>
