--- a/index.html
+++ b/index.html
@@ -77,28 +77,187 @@
         </p>
         <img src="./images/koshka.png" />
       </li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>
+        <h3>Поза скрутки</h3>
+        <p>
+          Сядь на ноги, согнутые в коленях. Выпрями спину, шею, голову. Затем перебрось левую ступню за правое колено.
+          Затем поверни спину, шею голову влево, помогая руками повернуться налево, как можно больше. Находись в этой
+          позе долго. Этим устранишь многие болезни позвоночника. Этой позой можешь поменять течение лунной энергии на
+          солнечную. Или солнечной энергии на лунную. В таком же порядке вернись в исходное положение и сделай
+          упражнение вправо. Делая эту асану поймешь двойственность мира, осознаешь единое за двойственным.
+        </p>
+        <img src="./images/skrutka.png" />
+      </li>
+
+      <li>
+        <h3>Поза плуга – халасана</h3>
+        <p>
+          Положи свое прямое тело на спину. Сделай вдох, с выдохом забрось свои прямые ноги за голову. Коснись ими земли
+          за головой. Руки пусть свободно лежат на земле, либо помести их за голову. Эта поза известна, как поза плуга –
+          халасана. Она устраняет боли в пояснице, а также шее.
+        </p>
+        <img src="./images/plug.png" />
+      </li>
+      <li>
+        <h3>Гамукхасана – поза коровьей головы</h3>
+        <p>
+          Гамукхасана – поза коровьей головы. Сядь на пол на согнутые ноги в коленях. Перебрось одну ногу через другую,
+          выпрями спину. Забрось одну руку, согнутую в локте, за спину. И другую руку, также согнутую в локте, забрось
+          за спину. Затем, пусть ладони рук сомкнуться за спиной. Повторяй это упражнение в другую сторону. Этой позой
+          переключаются каналы с лунного на солнечный и с солнечного на лунный. Она применяется для выполнения мудр и
+          банкх.
+        </p>
+        <img src="./images/korova.png" />
+      </li>
+      <li>
+        <h3>Перевернутая поза – випаритакарани</h3>
+        <p>
+          Выслушай же описание перевернутой позы – випаритакарани. В прекрасном месте положи прямое тело на пол. Подними
+          ноги вверх, поддерживая низ туловища руками. Так оставайся долго. Этим упражнением реку времени обратишь
+          вспять. Будешь молодеть, все морщины расправятся. Этой асаной йоги меняют энергию и сознание местами.
+          Бесчисленные блага даруются этой позой. Но не переусердствуй. Продолжительность увеличивай постепенно. Хорошо
+          питайся и избегай дурных компаний. Йог, выполняющий эту позу, держит время в объятьях. Если же ноги отведешь
+          дальше от головы, чтобы они держались на руках – будешь господином половой энергии. Только лишь тогда
+          достигается брахмачарья, когда эта энергия под контролем
+        </p>
+        <img src="./images/viparita.png" />
+      </li>
+      <li>
+        <h3>Полукоролевская поза – артха сиршасана</h3>
+        <p>
+          Помести голову на пол, обхвати ее руками. Ноги при этом поставь на колени. Затем, выпрями ноги так, чтобы
+          опираться на ступни ног, голову и на руки, обхватывающие голову, чтобы тело было согнуто в пояснице. Так
+          оставайся и приобретешь острый разум, отличное зрение и знание тончайших энергий. По своему действию эта асана
+          сравнивается со стойкой на голове, поэтому она называется полукоролевская поза – артха сиршасана. Ученик мой,
+          если ты будешь наделен властью, если будешь вести жить раджи, которая требует постоянной бдительности и
+          которая требует сияние твоей личности, подобно сиянию Солнца, чтобы вызвать уважение приближенных и страх
+          недругов, выполняй эту королевскую позу.
+        </p>
+        <img src="./images/arthaSirhasana.png" />
+      </li>
+      <li>
+        <h3>Поза раджи – сишасана</h3>
+        <p>
+          Вот поза раджи – сишасана. Пусть раджа в прекрасном месте поместит свое тело на голову, чтобы опираться только
+          на голову и локти рук, а тело при этом было бы прямым. Если управляешь страной и испытываешь недостаток
+          времени – практикуй хотя бы эту позу.
+        </p>
+        <img src="./images/sirshasana.png" />
+      </li>
+      <li>
+        <h3>Сарвангасана – стойка на плечах</h3>
+        <p>
+          Сарвангасана – стойка на плечах. Ляг на землю на спину. Подними ноги и туловище вверх. Пусть они будут на
+          прямой линии вертикально. Подбородок при этом пусть упирается в грудь. Руки можешь держать вдоль тела, можешь
+          подпирать или туловище, можешь свободно положить их на землю. Эта поза подобна сиршасане (стойке на голове).
+          Если овладеешь этой асаной, будешь господином верхних центров своего тела.
+        </p>
+        <img src="./images/stoykaNaPlechax.png" />
+      </li>
+
+      <li>
+        <h3>Уштрасана – поза верблюда</h3>
+        <p>
+          Уштрасана – поза верблюда. Стань на колени, прогнись в спине назад и упрись ладонями рук в пятки ног. Эта поза
+          позволяет побрести контроль над верхними дыхательными органами и дает выносливость.
+        </p>
+        <img src="./images/camel.png" />
+      </li>
+      <li>
+        <h3>Поза полуколеса</h3>
+        <p>
+          Положи свое прямое тело на землю. Пусть руки лежат вдоль тела. Согни ноги в коленях и поставь их на ступни.
+          Захвати руками лодыжки ног и прогни туловище вверх. Эта поза полуколеса, она дает те же блага, что и поза
+          колеса.
+        </p>
+        <img src="./images/polKolesa.png" />
+      </li>
+      <li>
+        <h3>Поза круга - чакраасана</h3>
+        <p>
+          Ляг на спину, согни ноги в коленях. Забрось руки за голову и поставь их на землю. Упирайся на ладони и ступни
+          ног. Прогни свое тело вверх. Затем, пускай ступни и ладони идут на встречу друг другу – так получишь позу
+          круга (чакраасану). Эта асана устраняет загрязнения в позвоночнике и увеличивает жизненные силы.
+        </p>
+        <img src="./images/koleso.png" />
+      </li>
+      <li>
+        <h3>Поза отдыха героя</h3>
+        <p>
+          Сядь на землю между своих ступней, помогая руками, опусти свое туловище на землю. Забрось свои руки за голову
+          и так оставайся. Эта поза устраняет болезни в суставах, а также плечах. Она известна как поза отдыха героя.
+        </p>
+        <img src="./images/heroRest.png" />
+      </li>
+      <li>
+        <h3>Поза палки</h3>
+        <p>
+          Поза палки. Положи свое прямое тело на прекрасную подстилку на живот. Расположи ладони рук под плечами.
+          Подними свое прямое тело на прямых руках, как если бы тело было прямое как палка. Делай эту позу и ты
+          мобилизуешь свое сознание. Если чувствуешь, что с трудом контролируешь себя, это позой не дашь гневу вырваться
+          наружу. Эта поза дает ясность сознанию. Все болезни рук она лечит.
+        </p>
+        <img src="./images/palka.png" />
+      </li>
+      <li>
+        <h3>Поза собаки</h3>
+        <p>
+          Сделай все также, как в позе палки. А затем согнись в пояснице таким образом, чтобы ноги были прямыми. Руки,
+          голову, туловище выровняй в одну линию. Это поза собаки. Делай ее и получишь чистоту каналов в руках, ногах и
+          пояснице. Кровь вместе с праной омоет твои руки, туловище и голову. Этим обновишь кровь в ногах своих.
+          Выносливость обретается этой позой. Ею уравновесишь баланс крови и энергии в организме.
+        </p>
+        <img src="./images/sobaka.png" />
+      </li>
+      <li>
+        <h3>Скрученная стойка на руках</h3>
+        <p>
+          Обопрись на ладони рук и пальцы ног. Согни руки в локтях и помести локти рук поверх локтей так, чтобы колени
+          ног упирались в локти. Затем, сохраняя бдительность, оторвите пальцы ног от земли, опираясь только на ладони
+          рук. Эта поза известна как скрученная стойка на руках. Она развивает мышцы живота.
+        </p>
+        <img src="./images/frog.png" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
+      <li>
+        <h3></h3>
+        <p></p>
+        <img src="" />
+      </li>
       <li></li>
       <li></li>
       <li></li>
