--- a/index.html
+++ b/index.html
@@ -222,28 +222,52 @@
           <img src="./images/frog.png" />
         </li>
         <li>
-          <h3></h3>
-          <p></p>
+          <h3>Поза павлина – маюрасана</h3>
+          <p>
+            Стань на колени, наклонись вперед. Поставь руки на землю, чтобы ладони смотрели в сторону ног. Сведи оба
+            локтя вместе и упрись ими в область пупка. При этом голова должна упираться в землю. Выпрями ноги, оторви
+            голову от земли так, чтобы упор был на ладони и пальцы ног. Оставайся та, пока не потечет энергия. Затем,
+            подайся вперед и оторви пальцы ног, чтобы туловище и ноги были параллельны земле, а все туловище держалось
+            на ладонях. Эта поза называется поза павлина – маюрасана. Тот, кто практикует эту асану, имеет сильный
+            пищеварительный огонь, который переваривает все яды. Эта поза устраняет все болезни живота.
+          </p>
           <img src="" />
         </li>
         <li>
-          <h3></h3>
-          <p></p>
+          <h3>Трехугольная поза</h3>
+          <p>
+            А теперь я изложу трехугольную позу. Стань прямо, раздвинь ноги на ширине плеч, спину, шею, голову держи на
+            одной линии. Со вдохом подними руки и держи их параллельно земли, чтобы они составляли прямую линию. С
+            выдохом же наклонись вправо и дотронься правой рукой левой или правой ступни. Пусть при этом взор твой будет
+            обращен на левую руку. Руки старайся держать на прямой линии. Затем сделай то же упражнение в другую
+            сторону. Эта асана позволит устранить боли в позвоночнике. Она также меняет солнечные и лунные токи.
+          </p>
           <img src="" />
         </li>
         <li>
-          <h3></h3>
-          <p></p>
+          <h3>Поза саранчи</h3>
+          <p>
+            Ляг на землю, на живот. Расположи ладони рук под бедрами или соедини ладони рук в области паха. Опирайся на
+            руки и поднимай ноги как можно выше. Эта поза саранчи. Она дает силу в руках.
+          </p>
           <img src="" />
         </li>
         <li>
-          <h3></h3>
-          <p></p>
+          <h3>Поза дерева</h3>
+          <p>
+            Стань прямо на одну ногу. Другая нога, согнутая в колене, пусть упирается об нее. Подними руки над головой и
+            сомкни ладони вместе. Эта поза дает устойчивость разуму и нечувствительность к внешним воздействиям. Эта
+            прямая поза известна как поза дерева.
+          </p>
           <img src="" />
         </li>
         <li>
-          <h3></h3>
-          <p></p>
+          <h3>Поза полета</h3>
+          <p>
+            Стань на одну ногу, наклонись вперед. Подними другую ногу в продолжении тела. Расправь руки в разные
+            стороны, как лебедь расправляет крылья, садясь на воду. Сохраняй при этой равновесие. Эта поза дает ощущение
+            пространства и контролирует положение тела в нем. Эта поза полета.
+          </p>
           <img src="" />
         </li>
         <li>
