--- a/index.html
+++ b/index.html
@@ -10,28 +10,60 @@
     <section class="list-asanas">
       <h1>Hatha Yoga</h1>
       <h2>All asanas</h2>
-      <ol>
+      <div class="added"></div>
+      <button onclick="startTraining()">start</button>
+      <audio id="myAudio" src="./start.mp3"></audio>
+      <ol class="js-asanas" id="exerciseList">
         <li>
-          <h3>Поза для живота</h3>
-          <p>
-            Вот поза для живота. Ляг на землю, со вдохом забрось руки за голову. Затем с выдохом наклонись к ногам и
-            захвати лодыжки ног своих ладонями рук. Следи, чтобы ноги в коленях были прямыми. Так отдайся энергии внутри
-            тебя текущей. Потом дотронешься лбом коленей. Делая эту позу, устранишь все болезни внизу живота. Будет
-            радость в ногах.
-          </p>
-          <img src="./images/posaDlyaJivota.png" alt="" />
+          <form name="beili">
+            <fieldset>
+              <legend>Description</legend>
+              <h3>Поза для живота</h3>
+              <p>
+                Вот поза для живота. Ляг на землю, со вдохом забрось руки за голову. Затем с выдохом наклонись к ногам и
+                захвати лодыжки ног своих ладонями рук. Следи, чтобы ноги в коленях были прямыми. Так отдайся энергии
+                внутри тебя текущей. Потом дотронешься лбом коленей. Делая эту позу, устранишь все болезни внизу живота.
+                Будет радость в ногах.
+              </p>
+              <img src="./images/posaDlyaJivota.png" alt="" />
+            </fieldset>
+            <fieldset>
+              <legend>asana performens time</legend>
+              <label for="">
+                time asana
+                <input type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label for="">
+                break
+                <input type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
         <li>
-          <h3>Поза кобры – бхуджангасана</h3>
-          <p>
-            Вот поза кобры – бхуджангасана. О славный ученик, положи свое тело на пол, на живот. Помести ладони рук
-            своих под плечи. Подними вверх глаза, затем постепенно поднимай голову, прогибай шею, затем прогибай спину,
-            помогая себе руками прогнуться сильнее. Так оставайся отдавшись ей (энергии). Затем, делай все в обратном
-            порядке, чтобы выйти из позы. Ясную ярость приносит эта асана в разум. Как у кобры, готовой к нападению.
-            Этим упражнением излечишь глаза и верхнюю часть позвоночника. Ясность сознания получишь, делая эту асану.
-            Пробудишь силы, дремлющие в крестце.
-          </p>
-          <img src="./images/kobra.png" />
+          <form>
+            <h3>Поза кобры – бхуджангасана</h3>
+            <p name="">
+              Вот поза кобры – бхуджангасана. О славный ученик, положи свое тело на пол, на живот. Помести ладони рук
+              своих под плечи. Подними вверх глаза, затем постепенно поднимай голову, прогибай шею, затем прогибай
+              спину, помогая себе руками прогнуться сильнее. Так оставайся отдавшись ей (энергии). Затем, делай все в
+              обратном порядке, чтобы выйти из позы. Ясную ярость приносит эта асана в разум. Как у кобры, готовой к
+              нападению. Этим упражнением излечишь глаза и верхнюю часть позвоночника. Ясность сознания получишь, делая
+              эту асану. Пробудишь силы, дремлющие в крестце.
+            </p>
+            <img src="./images/kobra.png" />
+            <input type="checkbox" value="Поза кобры – бхуджангасана" name="2" />
+            <label for="">
+              time asana
+              <input type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+            </label>
+            <label for="">
+              break
+              <input type="number" name="" id="" min="1" max="10" step="1" value="1" />
+            </label>
+            <button type="submit">add to practice</button>
+          </form>
         </li>
         <li>
           <h3>Поза – символ йогина, отказавшегося от заблуждения</h3>
@@ -164,6 +196,7 @@
             поза позволяет побрести контроль над верхними дыхательными органами и дает выносливость.
           </p>
           <img src="./images/camel.png" />
+          <input type="checkbox" value="Уштрасана – поза верблюда" data-img="./images/camel.png" /> Вибрати
         </li>
         <li>
           <h3>Поза полуколеса</h3>
@@ -305,5 +338,6 @@
         <li></li>
       </ol>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
