--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <audio id="myAudio" src="./start.mp3"></audio>
       <ol class="js-asanas" id="exerciseList">
         <li>
-          <form name="beili">
+          <form name="" id="paschimottanasana">
             <fieldset>
               <legend>Description</legend>
               <h3>Поза для живота</h3>
@@ -38,6 +38,37 @@
                 <input type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
               </label>
               <button type="submit">add to practice</button>
+              <button type="button" name="delete">delete</button>
+            </fieldset>
+          </form>
+        </li>
+        <li>
+          <form name="" id="bhujangasana">
+            <fieldset>
+              <legend>Description</legend>
+              <h3>Поза кобры – бхуджангасана</h3>
+              <p>
+                Вот поза кобры – бхуджангасана. О славный ученик, положи свое тело на пол, на живот. Помести ладони рук
+                своих под плечи. Подними вверх глаза, затем постепенно поднимай голову, прогибай шею, затем прогибай
+                спину, помогая себе руками прогнуться сильнее. Так оставайся отдавшись ей (энергии). Затем, делай все в
+                обратном порядке, чтобы выйти из позы. Ясную ярость приносит эта асана в разум. Как у кобры, готовой к
+                нападению. Этим упражнением излечишь глаза и верхнюю часть позвоночника. Ясность сознания получишь,
+                делая эту асану. Пробудишь силы, дремлющие в крестце.
+              </p>
+              <img src="./images/kobra.png" alt="" />
+            </fieldset>
+            <fieldset>
+              <legend>asana performens time</legend>
+              <label for="">
+                time asana
+                <input type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label for="">
+                break
+                <input type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button type="submit">add to practice</button>
+              <button type="button" name="delete">delete</button>
             </fieldset>
           </form>
         </li>
