--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <input type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
               </label>
               <button type="submit">add to practice</button>
-              <button type="button" name="delete">delete</button>
+              <!-- <button type="button" name="delete">delete</button> -->
             </fieldset>
           </form>
         </li>
@@ -68,7 +68,7 @@
                 <input type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
               </label>
               <button type="submit">add to practice</button>
-              <button type="button" name="delete">delete</button>
+              <!-- <button type="button" name="delete">delete</button> -->
             </fieldset>
           </form>
         </li>
