exelent delete asanas

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <section class="list-asanas">
       <h1>Hatha Yoga</h1>
       <h2>All asanas</h2>
+      <h3 class="js-time totalTime">total</h3>
       <div class="added"></div>
       <button onclick="startTraining()">start</button>
       <audio id="myAudio" src="./start.mp3"></audio>
