--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="modal">
+      <h3 class="js-modalTitle"></h3>
       <button type="button" class="modalBtn" onclick="closeModal()">close</button>
     </div>
     <a href="https://youtu.be/j0lyt_VDQho?si=uq6w-kIr_gAhG4P2">link</a>
@@ -26,7 +27,7 @@
       <audio id="myAudio" src="./start.mp3"></audio>
       <ol class="js-asanas" id="exerciseList">
         <li>
-          <form name="" id="paschimottanasana">
+          <form name="" id="start">
             <fieldset>
               <legend>Description</legend>
               <h3>Старт</h3>
