--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="modal">
       <h3 class="js-modalTitle"></h3>
+      <img class="js-modalImg" src="" alt="" width="300" />
       <button type="button" class="modalBtn" onclick="closeModal()">close</button>
     </div>
     <a href="https://youtu.be/j0lyt_VDQho?si=uq6w-kIr_gAhG4P2">link</a>
