--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <h3 class="js-modalTitle"></h3>
       <img class="js-modalImg" src="" alt="" width="300" />
       <button type="button" class="modalBtn" onclick="closeModal()">close</button>
+      <div class="progress-container">
+        <div class="progress-bar" id="progressBar"></div>
+      </div>
     </div>
     <a href="https://youtu.be/j0lyt_VDQho?si=uq6w-kIr_gAhG4P2">link</a>
     <section class="list-asanas">
