--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
     <section class="list-asanas">
       <h1>Hatha Yoga</h1>
       <h2>All asanas</h2>
+
       <div class="js-time">
         <h3 class="totalTime"></h3>
       </div>
-
+      <button class="js-start" onclick="startTraining()">start</button>
       <div class="added"></div>
       <!-- <div class="js-start">
         <h3 class="totalTime"></h3>
       </div> -->
-      <button class="js-start" onclick="startTraining()">start</button>
-      <audio id="myAudio" src="./start.mp3"></audio>
+
+      <audio id="myAudio" src="./audio/rest.mp3"></audio>
       <ol class="js-asanas" id="exerciseList">
         <li>
           <form name="" id="start">
+            <audio id="" name="startAudio" src="./audio/enter.mp3"></audio>
             <fieldset>
               <legend>Description</legend>
               <h3>Старт</h3>
@@ -59,6 +61,7 @@
         </li>
         <li>
           <form name="" id="paschimottanasana">
+            <audio id="myAudio" src="./audio/start.mp3"></audio>
             <fieldset>
               <legend>Description</legend>
               <h3>Поза для живота</h3>
@@ -87,6 +90,7 @@
         </li>
         <li>
           <form name="" id="bhujangasana">
+            <audio id="myAudio" src="./audio/start.mp3"></audio>
             <fieldset>
               <legend>Description</legend>
               <h3>Поза кобры – бхуджангасана</h3>
