--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <form name="startPractice" id="start">
             <audio id="" name="startAudio" src="./audio/enter.mp3"></audio>
             <fieldset class="fieldDescription">
-              <legend>Description</legend>
-              <h3 class="title-desc">Старт</h3>
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Вход в практику</h3>
               <p class="asana-desc">
                 Перед началом практики сядь прямо, успокой свой разум и пожелай счастья всем живым существам во
                 Вселенной. Затем, подумай о всех учителях йоги и попроси у них защиты и помощи в овладении йогой.
@@ -64,7 +64,7 @@
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
               <label for="" class="time-label">
-                time asana, minutes:
+                asana, minutes:
                 
                 <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
               </label>
